--- a/Memoria.ipynb
+++ b/Memoria.ipynb
@@ -32,7 +32,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[En que consiste el proyecto]"
+    "[En que consiste el proyecto]\n",
+    "\n",
+    "Para un trabajo \"tradicional\" de Machine Learning, lo que habitualmente se hace es obtener todas las características del audio posibles tanto del dominio temporal como frecuencial y luego se escogen las que se cree que son más útiles para el trabajo que se está realizando. "
    ]
   },
   {
@@ -111,15 +113,21 @@
     "\n",
     "Una tasa de muestreo más alta significa una representación más precisa pero requiere más recursos de memoria, mientras que una tasa de muestreo más baja significa una representación menos precisa pero requiere menos recursos de memoria.\n",
     "\n",
-    "Al elegir una tasa de muestreo adecuada para la conversión analógica a digital, es importante conocer el teorema de muestreo de Nyquist-Shannon. Este teorema establece que, para capturar y reconstruir con precisión una señal analógica y evitar el _aliasing_, la tasa de muestreo debe ser al menos el doble de la frecuencia más alta presente en la señal de audio, conocida como la Tasa/Frecuencia de Nyquist.\n",
+    "Al elegir una tasa de muestreo adecuada para la conversión analógica a digital, es importante conocer el teorema de muestreo de Nyquist-Shannon. Este teorema establece que, para capturar y reconstruir con precisión una señal analógica y evitar el _aliasing_, la tasa de muestreo ($F_m$) debe ser al menos el doble de la frecuencia más alta presente en la señal de audio ($f_{max}$), conocida como la Tasa/Frecuencia de Nyquist ($N_f$).\n",
     "\n",
     "$$F_m \\geq N_f = \\frac{f_{max}}{2}$$\n",
     "\n",
     "Hablemos de dos parámetros cruciales para extraer características: el tamaño del marco (_frame length_) y la longitud de salto (_hop length_). Después de procesar una señal, se divide en marcos con cierto tamaño y superposición. Esto es esencial para capturar la variación temporal en las características de la señal. Los métodos tradicionales de extracción de características dan un solo número como resumen, pero esto borra la información temporal. La solución es dividir la señal en marcos, calcular características como la media para cada marco y obtener un resumen de características dependiente del tiempo.\n",
     "\n",
-    "-  Tamaño del Marco (_Frame_): Describe el tamaño de cada marco. Por ejemplo, si el tamaño del marco es 1024, incluyes 1024 muestras en cada marco y calculas las características necesarias para cada conjunto de estas 1024 muestras. En general, se recomienda que el tamaño del marco sea una potencia de 2. La razón detrás de esto es porque la Transformada Rápida de Fourier requiere que los marcos tengan un tamaño que sea una potencia de 2.\n",
+    "-  Tamaño del Marco (_Frame_): Describe el tamaño de cada marco. Si por ejemplo trabajamos con una frecuencia de muestreo de 44.1 Hz (frecuencia típica en los CD rom), cada sample equivale a 0.0227ms, un número mucho menor que la resolución temporal propia de los humanos (alrededor de 10ms). Con los _frames_ se pretenede obtener la suficiente duración temporal para apreciar los eventos acústicos. Por ejemplo, si el tamaño del marco es 1024, lo equivalente a un intervalo temporal de 23.245ms para una frecuencia de muestreo de 44.1 Hz, incluyes 1024 muestras en cada marco y calculas las características necesarias para cada conjunto de estas 1024 muestras. En general, se recomienda que el tamaño del marco sea una potencia de 2. La razón detrás de esto es porque la Transformada Rápida de Fourier requiere que los marcos tengan un tamaño que sea una potencia de 2.\n",
     "\n",
-    "- Longitud de Salto: Se refiere al número de muestras por el cual se avanza un marco en cada paso a lo largo de la secuencia de datos, es decir, el número de muestras que desplazamos hacia la derecha antes de generar un nuevo marco. Puede ser útil pensar en el marco como una ventana deslizante que se mueve a través de la señal en pasos definidos por la longitud de salto. En cada paso, la ventana se aplica a una nueva sección de la señal o secuencia, y se realiza la extracción de características en ese segmento. La longitud de salto, por lo tanto, determina la superposición entre marcos de audio consecutivos. Una longitud de salto igual al tamaño del marco significa que no hay superposición, ya que cada marco comienza exactamente donde termina el anterior. Sin embargo, para mitigar el impacto de un fenómeno llamado \"fuga espectral\" (que ocurre al convertir una señal de su dominio de tiempo a su dominio de frecuencia), se aplica una función de ventana, lo que resulta en la pérdida de datos alrededor de los bordes de cada marco. Por lo tanto, a menudo se eligen longitudes de salto intermedias para preservar las muestras en los bordes, lo que resulta en diferentes grados de superposición entre marcos.\n",
+    "- Longitud de Salto: Se refiere al número de muestras por el cual se avanza un marco en cada paso a lo largo de la secuencia de datos, es decir, el número de muestras que desplazamos hacia la derecha antes de generar un nuevo marco. La longitud de salto, por lo tanto, determina la superposición entre marcos de audio consecutivos. \n",
+    "\n",
+    "Para mitigar el impacto de un fenómeno llamado \"fuga espectral\", que ocurre al convertir una señal de su dominio de tiempo a su dominio de frecuencia y que produce componentes de alta frecuencia no presentes en la señal original, se aplica una función de ventana a cada marco, multiplicando la señal por la función ventana correspondiente sobre el marco, lo que resulta en la pérdida de datos alrededor de los bordes de cada marco. Por lo tanto, a menudo se eligen longitudes de salto intermedias para preservar las muestras en los bordes, lo que resulta en diferentes grados de superposición entre marcos. Una de las funciones ventana más conocida es la función de Hann que se define como sigue:\n",
+    "\n",
+    "$$w(k) = 0.5 \\cdot (1-cos(\\frac{2\\pi k}{K-1})), k=1...K$$\n",
+    "\n",
+    "[Introducir imagenes explicatorias? (Frame length, Hop length, windowing)]\n",
     "\n",
     "Previamente a la definición matemática de algunas características, aclaramos ciertas notaciones:\n",
     "\n",
@@ -140,36 +148,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En español, la envolvente de una señal, es simplemente el valor máximo de la amplitud en cierto intervalo de tiempo (_frame_). Matemáticamente, podemos definir el envolvente de la amplitud del _frame_ k-ésimo como:\n",
+    "En español, la envolvente de una señal, es simplemente el valor máximo de la amplitud en cierto intervalo de tiempo (_frame_). Esta característica nos proporciona una idea aproximada sobre el volumen de la señal. Un problema del AE es que es sensible a los outliers. Matemáticamente, podemos definir el envolvente de la amplitud del _frame_ k-ésimo como:\n",
     "\n",
-    "$$AE_k = max^{(k+1) \\cdot K-1}_{i=k \\cdot K} x_i$$"
+    "$$AE_k = max^{(k+1) \\cdot K-1}_{i=k \\cdot K} x_i$$\n",
+    "\n",
+    "Algunas de las aplicaciones de esta característica son:\n",
+    "- Onset detection: detectar el inicio de una nota musical, una palabra, o un evento sonoro en general...\n",
+    "- Clasificacion por genero musical"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Root-Mean Square Energy (RMSE)"
+    "Extracción: https://www.youtube.com/watch?v=rlypsap6Wow&list=PL-wATfeyAMNqIee7cH3q1bh4QJFAaeNv0&index=8"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La energía $E$ de una señal continua se define como el area bajo la magnitud al cuadrado de la señal. Para señales de audio equivale a como de alto suena la señal. Para una señal contínua en un intervalo de tiempo $T$ se define como $$E_c=\\int_{0}^{T} |x(t)|^2$$\n",
-    "Y para una señal discreta con N muestras $$E_d = \\sum_{n=1}^N |x(n)|^2$$\n",
+    "### Root-Mean Square Energy (RMS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La energía $E$ de una señal continua se define como el area bajo la magnitud al cuadrado de la señal. Para señales de audio equivale a como de alto suena la señal. Para una señal contínua en un intervalo de tiempo $K$ se define como $$E_c=\\int_{0}^{K} |x(t)|^2$$\n",
+    "Y para una señal discreta con N muestras $$E_d = \\sum_{i=1}^K |x_i|^2$$\n",
     "\n",
-    "El root-mean-square energy (RMSE), o valor eficaz, es otra medida importante en el análisis de señales. Se calcula tomando la raíz cuadrada del valor promedio de la energía de la señal. Para una señal continua x(t) en un intervalo de tiempo T, el RMSE se calcula de la siguiente manera:\n",
+    "El root-mean-square energy (RMS), o valor eficaz, es otra medida importante en el análisis de señales. Se calcula tomando la raíz cuadrada del valor promedio de la energía de la señal. Para una señal continua x(t) en un intervalo de tiempo $K$, el RMSE se calcula de la siguiente manera:\n",
     "\n",
-    "$$RMSE = \\sqrt{\\frac{1}{T}E_c}$$\n",
+    "$$RMS = \\sqrt{\\frac{1}{K}E_c}$$\n",
     "\n",
     "En el caso de una señal discreta con N muestras, el RMS se calcula como:\n",
     "\n",
-    "$$RMSE = \\sqrt{\\frac{1}{T}E_d}$$\n",
+    "$$RMS = \\sqrt{\\frac{1}{K}E_d}$$\n",
     "\n",
-    "El RMSE es útil porque proporciona una medida de la \"amplitud efectiva\" de la señal. Mientras que la amplitud pico da la magnitud máxima de la señal, el RMSE tiene en cuenta la magnitud de todos los valores y proporciona una medida más representativa de la energía o potencia de la señal. En el caso de señales sinusoidales, el valor RMS es directamente proporcional a la amplitud de la señal.\n",
+    "El RMS es útil porque proporciona una medida de la \"amplitud efectiva\" de la señal. Mientras que la amplitud pico da la magnitud máxima de la señal, el RMS tiene en cuenta la magnitud de todos los valores y proporciona una medida más representativa de la energía o potencia de la señal. En el caso de señales sinusoidales, el valor RMS es directamente proporcional a la amplitud de la señal.\n",
     "\n",
-    "A continuación obtenemos el RMSE de la canción \"Nessun Dorma\" para un tamaño de frame de 1024 y con un salto de 512."
+    "Algunas de las aplicaciones de esta característica son:\n",
+    "- Segmentación de audio\n",
+    "- Clasificacion por genero musical\n",
+    "\n",
+    "A continuación obtenemos el RMS de la canción \"Nessun Dorma\" para un tamaño de frame de 1024 y con un salto de 512."
    ]
   },
   {
@@ -252,14 +275,18 @@
     "\n",
     "La tasa de cruces con cero (ZCR) se define formalmente como:\n",
     "\n",
-    "$$ ZCR = \\frac{1}{T-1} \\sum_{i=1}^{T-1} 1_{\\mathbb{R} < 0}(s_t \\cdot s_{t-1}) $$\n",
+    "$$ ZCR = \\frac{1}{K-1} \\sum_{i=1}^{K-1} 1_{\\mathbb{R} < 0}(x_i \\cdot x_{i-1}) $$\n",
     "\n",
     "Donde:\n",
-    "- T es la longitud de la señal discreta.\n",
-    "- s_t  es el valor de la señal en el tiempo  t .\n",
-    "- $ 1_{\\mathbb{R} < 0}(s_t \\cdot s_{t-1}) $ es una función indicadora que toma el valor de 1 si $ s_t \\cdot s_{t-1} $ es negativo (indicando un cambio de signo), y 0 en caso contrario.\n",
-    "- La suma se realiza sobre todos los tiempos  t  desde 1 hasta  T-1 .\n",
-    "- La división por  T-1  normaliza la suma para obtener la tasa promedio de cruces con cero por unidad de tiempo.\n"
+    "- $ 1_{\\mathbb{R} < 0}(x_i \\cdot x_{i-1}) $ es una función indicadora que toma el valor de 1 si $ x_i \\cdot x_{i-1} $ es negativo (indicando un cambio de signo), y 0 en caso contrario.\n",
+    "- La suma se realiza sobre todos los tiempos $i$ desde 1 hasta K-1 .\n",
+    "- La división por $K-1$ normaliza la suma para obtener la tasa promedio de cruces con cero por unidad de tiempo.\n",
+    "\n",
+    "Algunas de las aplicaciones de esta característica son:\n",
+    "- Reconocimiento de sonidos agudos (bajo ZCR) vs percusión (alto ZCR)\n",
+    "- Estimación de tono monofónico (nota)\n",
+    "- Detectar si una señal contiene voz o no\n",
+    "- Clasificacion por genero musical\n"
    ]
   },
   {
@@ -357,35 +384,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Características de dominio frecuencial"
+    "## Características de dominio frecuencial (spectrum)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transformada de Fourier"
+    "### Spectrum (Transformada de Fourier)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Spectograma"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Frecuencia Cromática"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Frecuencia cromática: se relaciona estrechamente con las doce clases de tonos diferentes. Las características basadas en croma, que también se conocen como “ perfiles de clase de tono “, son una herramienta poderosa para analizar música cuyos tonos se pueden categorizar de manera significativa (a menudo en doce categorías) y cuya afinación se aproxima a la escala de temperamento igual. Una propiedad principal de las características cromáticas es que capturan las características armónicas y melódicas de la música, al tiempo que son resistentes a los cambios en el timbre y la instrumentación."
+    "Aplicando la transformada de fourier a la señal en dominio temporal, obteniendo la señal represantada en el dominio frecuencial"
    ]
   },
   {
@@ -442,7 +455,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Características del dominio cepstral"
+    "### Spectral Flux"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Características de dominio temporal-frecuencial o cepstral (spectrograma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spectogram (Short Time Fourier Transform)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El espectrograma (time-freq 2d) se obtiene aplicando la Short Time Fourier Transform a la representación time-freq de la señal [...]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Frecuencia Cromática"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Frecuencia cromática: se relaciona estrechamente con las doce clases de tonos diferentes. Las características basadas en croma, que también se conocen como “ perfiles de clase de tono “, son una herramienta poderosa para analizar música cuyos tonos se pueden categorizar de manera significativa (a menudo en doce categorías) y cuya afinación se aproxima a la escala de temperamento igual. Una propiedad principal de las características cromáticas es que capturan las características armónicas y melódicas de la música, al tiempo que son resistentes a los cambios en el timbre y la instrumentación."
    ]
   },
   {
