--- a/Memoria.ipynb
+++ b/Memoria.ipynb
@@ -175,14 +175,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La energía $E$ de una señal continua se define como el area bajo la magnitud al cuadrado de la señal. Para señales de audio equivale a como de alto suena la señal. Para una señal contínua en un intervalo de tiempo $K$ se define como $$E_c=\\int_{0}^{K} |x(t)|^2$$\n",
-    "Y para una señal discreta con N muestras $$E_d = \\sum_{i=1}^K |x_i|^2$$\n",
+    "La energía $E$ de una señal continua se define como el area bajo la magnitud al cuadrado de la señal. Para señales de audio equivale a como de alto suena la señal. Para una señal contínua en un intervalo de tiempo $T$ se define como $$E_c=\\int_{0}^{T} |x(t)|^2$$\n",
+    "Y para una señal discreta con K muestras $$E_d = \\sum_{i=1}^K |x_i|^2$$\n",
     "\n",
-    "El root-mean-square energy (RMS), o valor eficaz, es otra medida importante en el análisis de señales. Se calcula tomando la raíz cuadrada del valor promedio de la energía de la señal. Para una señal continua x(t) en un intervalo de tiempo $K$, el RMSE se calcula de la siguiente manera:\n",
+    "El root-mean-square energy (RMS), o valor eficaz, es otra medida importante en el análisis de señales. Se calcula tomando la raíz cuadrada del valor promedio de la energía de la señal. Para una señal continua x(t) en un intervalo de tiempo $T$, el RMSE se calcula de la siguiente manera:\n",
     "\n",
-    "$$RMS = \\sqrt{\\frac{1}{K}E_c}$$\n",
+    "$$RMS = \\sqrt{\\frac{1}{T}E_c}$$\n",
     "\n",
-    "En el caso de una señal discreta con N muestras, el RMS se calcula como:\n",
+    "En el caso de una señal discreta con K muestras, el RMS se calcula como:\n",
     "\n",
     "$$RMS = \\sqrt{\\frac{1}{K}E_d}$$\n",
     "\n",
@@ -251,13 +251,6 @@
    "metadata": {},
    "source": [
     "En rojo podemos ver el RMSE sobre la forma de onda de la canción. Se puede observar como presenta mucha menos variabilidad que la onda original. Como hemos mencionado previamente, esto es debido a que el RMS considera todos los valores de la señal y no únicamente el máximo."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Crest Factor"
    ]
   },
   {
@@ -378,6 +371,13 @@
     "Nota: normalmente la musica rock tiene un zcr alto respecto a otros generos como la música clasica debido a los **intrumentos de percusión**.\n",
     "\n",
     "Nota: Vemos que el eje de las x se corresponden a los segundos de la canción (195)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Crest Factor"
    ]
   },
   {
