Modificado completo.ipynb

--- a/completo.ipynb
+++ b/completo.ipynb
@@ -23,6 +23,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Código Nicolás: he tratado de hacer que se extraigan las caracteríscas en ventanas de 10 ms\n",
+    "def normalize(x, axis = 0):\n",
+    "    return preprocessing.minmax_scale(x, axis = axis)\n",
+    "\n",
+    "def extrae_var(cancion):\n",
+    "\n",
+    "    # Obtener la muestra de audio (samples) y el tamaño de la ventana(sr)\n",
+    "    samples, sr = librosa.load(cancion)\n",
+    "\n",
+    "    features = [cancion]\n",
+    "\n",
+    "    # Configuración para ventanas de 10 ms\n",
+    "    frame_length = int(0.01 * sr)  # 10 ms en muestras\n",
+    "    hop_length = int(0.01 * sr)  # Salto de 10 ms\n",
+    "\n",
+    "    # Tempo\n",
+    "    onset_env = librosa.onset.onset_strength(y=samples, sr=sr, hop_length = hop_length)\n",
+    "    tempo, _ = librosa.beat.beat_track(onset_envelope=onset_env, sr=sr)\n",
+    "    features.append(tempo)\n",
+    "\n",
+    "    # Espectrograma\n",
+    "    spectrogram = np.abs(librosa.stft(samples, hop_length=hop_length, n_fft=frame_length))\n",
+    "\n",
+    "    print(\"Len Spectrogram: \", len(spectrogram))\n",
+    "\n",
+    "    # Media de la energía en cada ventana de 10 ms\n",
+    "    rms = librosa.feature.rms(y=samples, frame_length=frame_length)[0]\n",
+    "    features.append(np.mean(rms))\n",
+    "\n",
+    "    print(\"Len Energy: \", len(rms))\n",
+    "\n",
+    "    # Centroides espectrales\n",
+    "    spectral_centroids = librosa.feature.spectral_centroid(y=samples, sr=sr, n_fft=frame_length)[0]\n",
+    "    features.append(np.mean(spectral_centroids))\n",
+    "\n",
+    "    print(\"Len Spectral Centroids: \", len(spectral_centroids))\n",
+    "\n",
+    "    # Ancho de banda de frecuencia\n",
+    "    spectral_bandwidth = librosa.feature.spectral_bandwidth(y=samples, sr=sr, n_fft=frame_length)[0]\n",
+    "    features.append(np.mean(spectral_bandwidth))\n",
+    "\n",
+    "    print(\"Len Spectral Bandwidth: \", len(spectral_bandwidth))\n",
+    "\n",
+    "    # Spectral Rolloff\n",
+    "    spectral_rolloff = librosa.feature.spectral_rolloff(y=samples + 0.01, sr=sr, n_fft=frame_length)[0]\n",
+    "    features.append(np.mean(spectral_rolloff))\n",
+    "\n",
+    "    print(\"Len Spectral Rolloff: \", len(spectral_rolloff))\n",
+    "\n",
+    "    # Tonnetz\n",
+    "    tonnetz = librosa.feature.tonnetz(y=librosa.effects.harmonic(samples), sr=sr)\n",
+    "    features.append(np.mean(tonnetz))\n",
+    "\n",
+    "    print(\"Len Tonnetz: \", len(tonnetz))\n",
+    "\n",
+    "    # ZCR\n",
+    "    zero_crossings= librosa.zero_crossings(y=samples)\n",
+    "    features.append(np.mean(zero_crossings))\n",
+    "\n",
+    "    print(\"Len ZCR: \", len(zero_crossings))\n",
+    "\n",
+    "    # Mel spectrogram\n",
+    "    mel_spectrogram = librosa.feature.melspectrogram(y=samples, sr=sr, n_fft=frame_length)[0]\n",
+    "    features.append(np.mean(librosa.power_to_db(mel_spectrogram)))\n",
+    "\n",
+    "    print(\"Len Mel Spectogram: \", len(mel_spectrogram))\n",
+    "\n",
+    "    # Cromatica\n",
+    "    cromatica = librosa.feature.chroma_stft(y=samples, sr=sr, n_fft=frame_length)[0]\n",
+    "    features.append(np.mean(cromatica))\n",
+    "    print(\"Len Cromatica \", len(cromatica))\n",
+    "\n",
+    "    # TEMPOGRAMA\n",
+    "    tempograma = librosa.feature.tempogram(onset_envelope = onset_env, sr = sr, win_length=frame_length)[0]\n",
+    "    print(\"Len Tempograma \", len(tempograma))\n",
+    "\n",
+    "    # Auto-correlation\n",
+    "    auto_c = librosa.autocorrelate(onset_env, max_size = tempograma.shape[0])\n",
+    "    auto_c = librosa.util.normalize(auto_c)\n",
+    "    features.append(np.mean(auto_c))\n",
+    "\n",
+    "    # MFCCS\n",
+    "    mfccs = librosa.feature.mfcc(y = samples, sr = sr, n_mfcc=20)\n",
+    "    \n",
+    "    columnas = ['archivo', 'tempo', 'rms', 'spectral_centroids', 'spectral_bandwith', 'spectral_rf', 'tonnetz', 'zero_crossings', 'mels_spectogram', \"cromatica\", \"auto-correlation\"]\n",
+    "\n",
+    "    for x in range(1, 21):\n",
+    "        columnas.append(f'mfcc_{x}')\n",
+    "\n",
+    "    features.extend([np.mean(m) for m in mfccs])\n",
+    "\n",
+    "    df = pd.DataFrame(columns=columnas)\n",
+    "\n",
+    "    # Fila de datos\n",
+    "    df.loc[len(df)] = features\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [],
