Añadidos dos links de teoría

--- a/Memoria.ipynb
+++ b/Memoria.ipynb
@@ -562,7 +562,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Mel Spectograms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.youtube.com/watch?v=9GHCiiDLHQ4&list=PL-wATfeyAMNqIee7cH3q1bh4QJFAaeNv0&index=17"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Mel-Frequency Cepstral Coefficients "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.youtube.com/watch?v=4_SH2nfbQZ8&list=PL-wATfeyAMNqIee7cH3q1bh4QJFAaeNv0&index=19"
    ]
   },
   {
