--- a/Memoria.ipynb
+++ b/Memoria.ipynb
@@ -51,7 +51,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[En que consiste la sección]"
+    "El proceso mediante el cual una señal de audio es procesada con el fin de extraer diferentes caracteríscticas de dicha señal que permitan describirla y analizarla es denominada *Feature Extraction*.\n",
+    "\n",
+    "Una forma de classificar las diferentes características (features) es en función de su dominio. Distinguiendo tres categorías diferentes: Dominio Temporal, Dominio Frecuencial y Dominio Cepstral.\n",
+    "\n",
+    "Teniendo en cuenta que puede darse el caso de que no se tenga un objetivo claro del analisis final a realizar y por tanto de las características que aportarán la información más relevante. Es importante tener en cuenta que de cara a emplear las variables para la implementación de algoritmos de machine learning, será interesante que las variables empleadas en el modelo no presenten mucha correlación entre ellas, puesto que esto aportaría redundancia para el modelo.\n",
+    "\n",
+    "En este apartado, lo que se pretende es mostrar los fundamentos teóricos y metodologías para la extracción de diferentes características para cada una de las categorías nombradas préviamente. Además, se realizará la comparación de dichas caracteríasticas entre cinco canciones. Una canción representativa de cada género musical del dataset creado para este proyecto. Dichas canciones serán las siguientes:\n",
+    "\n",
+    "+ **Jazz**:\n",
+    "+ **Ópera**:\n",
+    "+ **Rap**:\n",
+    "+ **Reggae**:\n",
+    "+ **Rock**"
    ]
   },
   {
