--- a/completo.ipynb
+++ b/completo.ipynb
@@ -60,7 +60,7 @@
     "    features.append(np.median(spectrogram))\n",
     "\n",
     "    # Mel Spectogram\n",
-    "    mel_spectogram = librosa.feature.melspectrogram(samples, sr=sr, n_fft=n_fft, hop_length=hop_length, n_mels=128)\n",
+    "    mel_spectogram = librosa.feature.melspectrogram(y=samples, sr=sr, n_fft=frame_length, hop_length=hop_length, n_mels=128)\n",
     "    features.append(np.median(mel_spectogram))\n",
     "\n",
     "    # Media de la energía en cada ventana de 10 ms\n",
