añadidas las canciones de cada tipo

--- a/Memoria.ipynb
+++ b/Memoria.ipynb
@@ -58,11 +58,23 @@
     "\n",
     "En este apartado, lo que se pretende es mostrar los fundamentos teóricos y metodologías para la extracción de diferentes características para cada una de las categorías nombradas préviamente. Además, se realizará la comparación de dichas caracteríasticas entre cinco canciones. Una canción representativa de cada género musical del dataset creado para este proyecto. Dichas canciones serán las siguientes:\n",
     "\n",
-    "+ **Jazz**:\n",
-    "+ **Ópera**:\n",
-    "+ **Rap**:\n",
-    "+ **Reggae**:\n",
-    "+ **Rock**"
+    "+ **Jazz**: *How Hight The Moon* de *Ella Fitzgerald*\n",
+    "+ **Ópera**: *Nessun Dorma* de *Luciano Pavarotti*\n",
+    "+ **Rap**: *Big Poppa* de *The Notorious B.I.G*\n",
+    "+ **Reggae**: *Get Up Stand Up* de *Bob Marley*\n",
+    "+ **Rock**: *The Trooper* de *Iron Maiden*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jazz = \"data/jazz/Ella Fitzgerald - How High The Moon (High Quality - Remastered)_djZCe7ou3kY.mp3\"\n",
+    "opera = \"data/opera/NessunDorma_Opera.mp3\"\n",
+    "rap = \"data/rap/Big Poppa.mp3\"\n",
+    "rock = \"data/rock/Iron Maiden - The Trooper (Official Video)-X4bgXH3sJ2Q.mp3\""
    ]
   },
   {
