--- a/Memoria.ipynb
+++ b/Memoria.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,14 +67,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "jazz = \"data/jazz/Ella Fitzgerald - How High The Moon (High Quality - Remastered)_djZCe7ou3kY.mp3\"\n",
     "opera = \"data/opera/NessunDorma_Opera.mp3\"\n",
     "rap = \"data/rap/Big Poppa.mp3\"\n",
-    "rock = \"data/rock/Iron Maiden - The Trooper (Official Video)-X4bgXH3sJ2Q.mp3\""
+    "reggae = \"data/reggae/Bob Marley - Get Up Stand Up [HQ Sound]-X2W3aG8uizA.mp3\"\n",
+    "rock = \"data/rock/Iron Maiden - The Trooper (Official Video)-X4bgXH3sJ2Q.mp3\"\n",
+    "\n",
+    "\n",
+    "jazz_s, _ = librosa.load(jazz)\n",
+    "opera_s, _ = librosa.load(opera)\n",
+    "reggae_s, _ = librosa.load(reggae)\n",
+    "rap_s, _ = librosa.load(rap)\n",
+    "rock_s, _ = librosa.load(rock)"
    ]
   },
   {
@@ -717,6 +725,19 @@
     "S_DB = librosa.power_to_db(S, ref=np.max)\n",
     "librosa.display.specshow(S_DB, sr=sr, hop_length=HOP_LENGTH, x_axis='time', y_axis='mel')\n",
     "plt.colorbar(format='%+2.0f dB')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(15, 4))\n",
+    "\n",
+    "plt.subplot(1, 3, 1)\n",
+    "\n",
+    "plt.title('1. Easier to see what is happening with only 32 mels.')"
    ]
   },
   {
